# ai-notes

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  makefile  package.json  pyproject.toml  requirements.txt  test_move.py
.github/workflows/: release.yml
ai-notes-app/: README.md  package.json  svelte.config.js
ai-notes-app-tauri/: package.json
ai-notes-app-tauri/src/: app.css
ai-notes-app-tauri/src-tauri/: tauri.conf.json
ai-notes-app-tauri/src-tauri/src/: lib.rs  models.rs
ai-notes-app-tauri/src/lib/: api.ts
ai-notes-app-tauri/src/lib/components/: Settings.svelte
ai-notes-app/src/lib/: api.ts
ai-notes-app/src/lib/components/: Editor.svelte  Settings.svelte  Sidebar.svelte  Viewer.svelte
ai-notes-app/src/routes/: +page.svelte
backend-go/: go.mod  go.sum  main.go
backend-go/internal/ai/: ai.go
backend-go/internal/config/: config.go
backend-go/internal/models/: models.go
backend-go/internal/storage/: storage.go
backend-go/internal/utils/: utils.go
notes/: D-Bus.md
src/: api.py  config.py  genai.py  storage.py  ui.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  lib.rs  storage.rs
src/lib/: api.ts  types.ts
src/lib/components/: Editor.svelte  Mermaid.svelte  Settings.svelte  Sidebar.svelte  Viewer.svelte
src/routes/: +layout.svelte  +page.svelte
