[project]
name = "ai-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.6.1",
    "pydantic>=2.11.7",
    "streamlit>=1.47.1",
    "tinydb>=4.8.2",
    "uvicorn>=0.40.0",
]
